--- a/Pictures/app/src/main/AndroidManifest.xml
+++ b/Pictures/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+                <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
